# bevy-naia-chat

./: Cargo.toml
.cargo/: config.toml
client/: Cargo.toml
client/src/: dev.rs  lib.rs  main.rs  networking.rs
client/src/networking/: events.rs
server/: Cargo.toml
server/src/: lib.rs  loading.rs  main.rs  networking.rs  player.rs
server/src/networking/: events.rs
shared/: Cargo.toml
shared/src/: channels.rs  config.rs  lib.rs  protocol.rs
shared/src/protocol/: foo.rs
